test/ppx_irmin/deriver/errors/unsupported_type_poly.ml
type t = { v : 'a. 'a } [@@deriving irmin]
