test/ppx_irmin/deriver/errors/unsupported_type_poly.expected
File "unsupported_type_poly.ml", line 1, characters 15-21:
Error: ppx_irmin: universally-quantified type 'a . 'a encountered. Irmin types must be grounded.
